--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,14 @@
-[build-system]
-requires = ["flit"]
-build-backend = "flit.buildapi"
+[tool.poetry]
+name = 'braubuddy'
+version = '0.0.1'
+authors = [
+    'James Stewart <james@amorphitec.io>',
+    'Stuart Dines <me@stuartdines.com>',
+]
+readme = 'README.md'
+repository = 'http://braubuddy.org/'
+homepage = 'https://github.com/amorphitec/braubuddy'
 
-[tool.flit.metadata]
-module = "braubuddy"
-author = "James Stewart"
-author-email = "james@amorphitec.io"
-home-page = "http://braubuddy.org/"
-
-requires=[]
-requires-python='>=3.6'
-
-description-file='README.md'
 classifiers=[
     'Development Status :: 4 - Beta',
     'Environment :: Web Environment',
@@ -22,3 +19,7 @@ classifiers=[
     'Programming Language :: Python',
     'Programming Language :: Python :: 3.6',
 ]
+
+[tool.poetry.dependencies]
+python = '>=3.6'
+
