Add dev dependencies
We will use `black` for code formatting and `pytest` with `pytest-cov`
for testing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,8 @@ classifiers=[
 [tool.poetry.dependencies]
 python = '>=3.6'
 
+[tool.poetry.dev-dependencies]
+black = '18.9b0'
+pytest = '4.0.1'
+pytest-cov = '2.6.0'
+
