--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,24 @@ black = '18.9b0'
 pytest = '4.0.1'
 pytest-cov = '2.6.0'
 
+[tool.black]
+line-length = 100
+py36 = true
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+
+  # The following are specific to Black, you probably don't want those.
+  | blib2to3
+  | tests/data
+)/
+'''
